--- a/index.css
+++ b/index.css
@@ -46,6 +46,8 @@ h3 {
   flex: 1;
 }
 h1 {
+  padding-left: 20%;
+  text-align: left;
   margin-top: 1vh;
   font-size: 8vw;
   -webkit-box-flex: 999;
@@ -223,9 +225,52 @@ button:active {
 .details {
   text-align: left;
 }
-.animation-controls {
+.animation-controls,
+.manual-control {
   color: white;
 }
+
+/* MODAL STYLINGS */
+#manual-modal {
+  display: none;
+  position: fixed;
+  z-index: 10;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+#modal-content {
+  background-color: #222;
+  margin: 15% auto;
+  padding: 1rem;
+  border: 2px solid black;
+  width: 75%;
+  color: white;
+  line-height: 1.5;
+}
+#modal-content ul {
+  list-style-type: none;
+}
+li {
+  font-size: 14px;
+  margin: 0.5rem;
+  text-align: left;
+}
+#close-modal {
+  color: white;
+  background-color: red;
+  font-size: 2rem;
+  font-weight: bold;
+  float: right;
+}
+#close-modal:hover {
+  cursor: pointer;
+}
+
+/* MEDIA QUERIES */
 @media only screen and (max-device-width: 320px) {
   h1 {
     font-size: 1.2rem;
