--- a/index.css
+++ b/index.css
@@ -25,7 +25,6 @@
   font-family: "Roboto Mono", monospace;
 }
 .header {
-  height: 8vh;
   background-color: transparent;
   color: white;
   display: -webkit-box;
@@ -39,7 +38,7 @@ h3 {
   padding: 5px 0;
 }
 .logo {
-  height: 100%;
+  height: 50px;
   margin: 2px 0 2px 10vw;
   -webkit-box-flex: 1;
   -ms-flex: 1;
@@ -76,6 +75,8 @@ footer {
   color: white;
 }
 .links a i:hover {
+  -webkit-transform: scale(1.35);
+  -ms-transform: scale(1.35);
   transform: scale(1.35);
 }
 h1,
@@ -162,6 +163,7 @@ button:active {
   position: relative;
 }
 .apod-img {
+  -o-object-fit: cover;
   object-fit: cover;
   width: 100%;
   height: 100%;
